tests/snapshots/run_wpt_conformance__coreml_neg_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg float32 4D tensor",
    "coreml",
    "PASS",
)
