tests/snapshots/run_wpt_conformance__coreml_neg_int64_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
neg.https.any.js neg int64 4D tensor, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported data type for neg: Int64

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    negInput: i64[1, 1, 1, 5];
  }

  nodes {
    [negOutput] = neg(negInput, label="");
  }

  outputs { negOutput; }
}
